testsuite/tests/jst-modular-extensions/user_error1.compilers.reference
File "user_error1.ml", line 19, characters 41-60:
19 | let _malformed_extension_has_payload = [%extension.something "no payloads"] ();;
                                              ^^^^^^^^^^^^^^^^^^^
Error: Modular extension nodes are not allowed to have a payload,
       but "extension.something" does
